add make run-server/run-client targets and fix Apple Silicon compat
- Add Makefile targets for running server and client with required
  --add-opens flags for Java 17+ compatibility
- Update sqlite-jdbc to 3.42.0.0 for Apple Silicon support
- Remove xml-apis-ext exclusion from batik for modern Java SVG support
- Update MANUAL_TEST.md with correct run commands and troubleshooting

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>